--- a/public/style/style.css
+++ b/public/style/style.css
@@ -12,6 +12,7 @@ nav{
     width: 100%;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     background: fixed;
    
 }
@@ -21,6 +22,7 @@ nav{
     background-image: url(../img/logo.png);
     background-position: center;
     background-repeat: no-repeat;
+    cursor: pointer;
     background-size: contain;
     
 }
@@ -43,7 +45,7 @@ nav{
     background-position: center;
     background-color: bisque; 
 }
-.rightbox{
+/* .rightbox{
     height: 30px;
     width: 15%;
     align-content: center;
@@ -52,7 +54,13 @@ nav{
     background-repeat: no-repeat;
     background-size: contain;
     margin-top: 1%;
-} */
+}  */
+.btn{
+    padding: 15px 60px;
+    background-color: red;
+    color: white;
+    border-radius: 3px;
+}
 h4{
     font-weight: 0;
 }
